[package]
name = "netloc"
version = "0.1.0"
authors = ["Anton Dort-Golts <dortgolts@gmail.com>"]

[dependencies]
byteorder = "1"
rand = "0.4"
clap = "2.0"
log = "0.4"
loggerv = "0.7"
tokio = "0.1.6"
tokio-io = "0.1.6"
futures = "0.1"
bytes = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
